+ Reuse $myOpenProjects from init.php in index.php , improving performance (srichter)
+ Improved SSL recognition (srichter)
+ Improved the timetracker widget on the project dashboard. It can now take working hours as input, and repeat an entry for subsequent days.
+ Re-Added closed projects on the desktop


Collabtive 2.0
+ Fixed notice on desktop that resulted from missing network connection during update check
+ Fixed deactivation of error reporting during update
+ Merge existing members and new members when adding project
+ Error reporting globally set to E_WARNING
+ Changed redirection after project creation from desktop or project administration to project dashboard
+ Improved translations: German, Polish, Farsi, Norwegian (Bokmal & Nynorsk), Simplified Chinese
+ Improved project tree's handling for special characters
+ Removed file upload from the add reply form. Now only previously uploaded files can be attached to replies.
+ Lots of code beautification in templates files
+ Make filemanager behave more like explorer (i.e. no pagination - show all files in each folder at once)
+ Revert to gridview as the default file view (this was changed in 1.2 b/c of issues)
+ Added edge case for SSL detection
+ Removed .htaccess file as it was causing trouble with some servers
+ Added start date functionality for tasks
+ Fixed several typos in style_form.css
+ Fixed typo in paginate-first function
+ Fixed cancel button for deleting folders in list view
+ Corrected label for edit button in project members view ("edit file" -> "edit user")
+ Changed permission for adding users to an existing project from "administration" to "project edit"
+ Implemented HTML Purifier filter for all user input. This will give us STRONG protection against all kinds of XSS attacks, while preserving rich formating options. It will also enhance well formedness.